<resources>
    <string name="app_name">Ringfort</string>
    <string name="button_addRingfort">Add Ringfort</string>
    <string name="hint_ringfortTitle">Ringfort Title</string>
    <string name="hint_ringfortDescription">Description </string>
    <string name="menu_addRingfort">Add</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_cancelRingfort">Cancel</string>
    <string name="menu_deleteRingfort">Delete</string>
    <string name="enter_ringfort_title"> Please enter a Ringfort Title </string>
    <string name="save_ringfort"> Save Ringfort </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_ringfort_image">Select ringfort image</string>
    <string name="change_ringfort_image">Change ringfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="hint_signupEmail">Email</string>
    <string name="hint_signupPassword">Password</string>
    <string name="button_register">Register account</string>
    <string name="button_register_login">Login to account</string>
    <string name="hint_loginEmail">Enter your login email</string>
    <string name="hint_loginPassword">Enter your login password</string>
    <string name="button_login">Login to account</string>
    <string name="button_login_register">Register an account</string>
    <string name="hint_settingsEmail">Edit email</string>
    <string name="hint_settingsPassword">Edit password</string>
    <string name="button_save_settings">Save Changes</string>
    <string name="checkboxRingFortVisited">checkboxRingFortVisited</string>
    <string name="visitDate">visitDate</string>
    <string name="checkbox_visited">Visited!</string>
    <string name="hint_notes">Record any additional notes</string>
    <string name="hint_date">Date Visited</string>
    <string name="totalRingforts">Total Number of ringforts</string>
    <string name="visitedRingorts">Number of ringforts visited</string>
    <string name="title_activity_ringfort_maps">Map of All Ringforts </string>
    <string name="ringfort_image_placeholder">Ringfort Image</string>
    <string name="ringfort_title_placeholder">Ringfort Title</string>
    <string name="ringfort_description_placeholder">Ringfort Description</string>
    <string name="menu_saveRingfort">Save</string>
    <string name="title_activity_ringfort_list">Ringforts</string>
    <string name="title_activity_ringfort">Ringfort</string>
    <string name="title_activity_edit_location">Ringfort</string>
</resources>
